Add an error dialog for error on open file.

--- a/src/main/resources/strings/vlcj-player.properties
+++ b/src/main/resources/strings/vlcj-player.properties
@@ -156,3 +156,7 @@ dialog.effects.tabs.video.adjust.brightness = Brightness
 dialog.effects.tabs.video.adjust.saturation = Saturation
 dialog.effects.tabs.video.adjust.contrast   = Contrast
 dialog.effects.tabs.video.adjust.gamma      = Gamma
+
+dialog.errorEncountered                     = Open File Error
+
+error.errorEncountered                      = Failed to open {0}
