--- a/pom.xml
+++ b/pom.xml
@@ -204,6 +204,11 @@
             <version>1.9.0</version>
         </dependency>
         <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-log4j12</artifactId>
+            <version>1.7.10</version>
+        </dependency>
+        <dependency>
             <groupId>uk.co.caprica</groupId>
             <artifactId>vlcj</artifactId>
             <version>3.3.0-SNAPSHOT</version>
