--- a/pom.xml
+++ b/pom.xml
@@ -211,7 +211,7 @@
         <dependency>
             <groupId>uk.co.caprica</groupId>
             <artifactId>vlcj</artifactId>
-            <version>3.3.0-SNAPSHOT</version>
+            <version>3.3.0</version>
         </dependency>
     </dependencies>
 
