Capture, show and save snapshot.

--- a/src/main/resources/strings/vlcj-player.properties
+++ b/src/main/resources/strings/vlcj-player.properties
@@ -90,6 +90,7 @@ menu.video.item.crop.item.default           = Default
 menu.video.item.snapshot                    = Take Snapshot
 menu.video.item.snapshot.mnemonic           = S
 #menu.video.item.snapshot.menuIcon           = snapshot
+menu.video.item.snapshot.buttonIcon         = snapshot
 
 menu.subtitle                               = Subtitle
 menu.subtitle.mnemonic                      = S
@@ -158,5 +159,7 @@ dialog.effects.tabs.video.adjust.contrast   = Contrast
 dialog.effects.tabs.video.adjust.gamma      = Gamma
 
 dialog.errorEncountered                     = Open File Error
-
 error.errorEncountered                      = Failed to open {0}
+
+dialog.saveImage                            = Save Image
+error.saveImage                             = Failed to save image to {0}\n{1}
