Check snapshot was actually written.

--- a/src/main/resources/strings/vlcj-player.properties
+++ b/src/main/resources/strings/vlcj-player.properties
@@ -163,3 +163,4 @@ error.errorEncountered                      = Failed to open {0}
 
 dialog.saveImage                            = Save Image
 error.saveImage                             = Failed to save image to {0}\n{1}
+error.saveImageFormat                       = Unknown image format "{0}"
