Partial support for recently played media menu.
It is not yet persisted across sessions.

--- a/src/main/resources/strings/vlcj-player.properties
+++ b/src/main/resources/strings/vlcj-player.properties
@@ -6,6 +6,10 @@ menu.media.item.openFile                    = Open File...
 menu.media.item.openFile.mnemonic           = F
 menu.media.item.openFile.shortcut           = control O
 menu.media.item.openFile.menuIcon           = file
+menu.media.item.recent                      = Open Recent Media
+menu.media.item.recent.mnemonic             = R
+menu.media.item.recent.item.clear           = Clear
+menu.media.item.recent.item.clear.mnemonic  = C
 menu.media.item.quit                        = Quit
 menu.media.item.quit.mnemonic               = Q
 menu.media.item.quit.shortcut               = control Q
