Initial changes to bring vlcj-player up-to-date with vlcj-4

--- a/src/main/resources/strings/vlcj-player.properties
+++ b/src/main/resources/strings/vlcj-player.properties
@@ -139,6 +139,7 @@ dialog.about.blurb1                         = vlcj Player is a free and open sou
 dialog.about.blurb2                         = This is a demo project showing how to build a complete media player application using vlcj.
 dialog.about.attribution1                   = This project uses icons from the VLC project.
 dialog.about.applicationVersion             = vlcj Player Version
+dialog.about.nativeLibraryPath              = Native Library Path
 dialog.about.vlcjVersion                    = vlcj Version
 dialog.about.vlcVersion                     = LibVLC Version
 
