Changes for vlcj-4

--- a/src/main/resources/strings/vlcj-player.properties
+++ b/src/main/resources/strings/vlcj-player.properties
@@ -21,6 +21,9 @@ menu.playback.item.title                    = Title
 menu.playback.item.title.mnemonic           = T
 menu.playback.item.chapter                  = Chapter
 menu.playback.item.chapter.mnemonic         = C
+menu.playback.item.renderer                 = Renderer
+menu.playback.item.renderer.mnemonic        = R
+menu.playback.item.renderer.item.local      = Local
 menu.playback.item.speed                    = Speed
 menu.playback.item.speed.mnemonic           = E
 menu.playback.item.speed.item.x4            = x4
@@ -55,10 +58,14 @@ menu.audio.item.device                      = Audio Device
 menu.audio.item.device.mnemonic             = D
 menu.audio.item.stereoMode                  = Stereo Mode
 menu.audio.item.stereoMode.mnemonic         = S
+menu.audio.item.stereoMode.item.unset       = Unset
 menu.audio.item.stereoMode.item.stereo      = Stereo
-menu.audio.item.stereoMode.item.left        = Left 
+menu.audio.item.stereoMode.item.left        = Left
 menu.audio.item.stereoMode.item.right       = Right
 menu.audio.item.stereoMode.item.reverse     = Reverse Stereo
+menu.audio.item.stereoMode.item.dolbys      = Dolby-S
+menu.audio.item.stereoMode.item.headphones  = Headphones
+menu.audio.item.stereoMode.item.mono        = Mono
 menu.audio.item.increaseVolume              = Increase Volume
 menu.audio.item.increaseVolume.mnemonic     = I
 menu.audio.item.increaseVolume.menuIcon     = increase-volume
