Changes to support multiple video outputs
Main change was to factor a current media player component in the
Application global context rather than hard-coding a single media
embedded player component.

Most changes flowed from that.

--- a/pom.xml
+++ b/pom.xml
@@ -216,7 +216,7 @@
         <dependency>
             <groupId>uk.co.caprica</groupId>
             <artifactId>vlcj</artifactId>
-            <version>4.0.5</version>
+            <version>4.0.7-SNAPSHOT</version>
         </dependency>
     </dependencies>
 
