--- a/src/main/resources/strings/vlcj-player.properties
+++ b/src/main/resources/strings/vlcj-player.properties
@@ -102,6 +102,8 @@ menu.video.item.snapshot                    = Take Snapshot
 menu.video.item.snapshot.mnemonic           = S
 #menu.video.item.snapshot.menuIcon           = snapshot
 menu.video.item.snapshot.buttonIcon         = snapshot
+menu.video.item.output                      = Output
+menu.video.item.output.mnemonic             = P
 
 menu.subtitle                               = Subtitle
 menu.subtitle.mnemonic                      = S
