--- a/pom.xml
+++ b/pom.xml
@@ -216,7 +216,7 @@
         <dependency>
             <groupId>uk.co.caprica</groupId>
             <artifactId>vlcj</artifactId>
-            <version>4.0.7-SNAPSHOT</version>
+            <version>4.4.2</version>
         </dependency>
     </dependencies>
 
