Make it easier to run from the cli

--- a/pom.xml
+++ b/pom.xml
@@ -175,6 +175,17 @@
                     </execution>
                 </executions>
             </plugin>
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>exec-maven-plugin</artifactId>
+                <version>3.0.0</version>
+                <configuration>
+                    <mainClass>uk.co.caprica.vlcjplayer.VlcjPlayer</mainClass>
+                    <arguments>
+                        <argument>https://youtu.be/XHprwDJ0-fU</argument>
+                    </arguments>
+                </configuration>
+            </plugin>
         </plugins>
         <resources>
             <resource>
