Add exec in maven command line

--- a/pom.xml
+++ b/pom.xml
@@ -1,4 +1,4 @@
-<!-- 
+<!--
 /*
  * This file is part of VLCJ.
  *
@@ -20,8 +20,8 @@
 -->
 
 <project
-    xmlns="http://maven.apache.org/POM/4.0.0" 
-    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" 
+    xmlns="http://maven.apache.org/POM/4.0.0"
+    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
     xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
 >
 
@@ -139,6 +139,26 @@
                         </manifest>
                     </archive>
                 </configuration>
+            </plugin>
+            <plugin>
+              <groupId>org.codehaus.mojo</groupId>
+              <artifactId>exec-maven-plugin</artifactId>
+              <version>3.0.0</version>
+              <executions>
+                <execution>
+                  <goals>
+                    <goal>exec</goal>
+                  </goals>
+                </execution>
+              </executions>
+              <configuration>
+                <executable>maven</executable>
+                <mainClass>uk.co.caprica.vlcjplayer.VlcjPlayer</mainClass>
+                <!-- optional -->
+                <arguments>
+                  <args>${args}</args>
+                </arguments>
+              </configuration>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
