--- a/pom.xml
+++ b/pom.xml
@@ -77,6 +77,7 @@
         <connection>scm:git:git@github.com:caprica/vlcj-player.git</connection>
         <developerConnection>scm:git:git@github.com:caprica/vlcj-player.git</developerConnection>
         <url>git@github.com:caprica/vlcj-player.git</url>
+        <tag>HEAD</tag>
     </scm>
 
     <build>
@@ -173,14 +174,14 @@
             <version>11.0</version>
         </dependency>
         <dependency>
-            <groupId>net.java.dev.glazedlists</groupId>
-            <artifactId>glazedlists_java15</artifactId>
-            <version>1.9.1</version>
+            <groupId>com.glazedlists</groupId>
+            <artifactId>glazedlists</artifactId>
+            <version>1.11.0</version>
         </dependency>
         <dependency>
             <groupId>org.slf4j</groupId>
-            <artifactId>slf4j-log4j12</artifactId>
-            <version>2.0.1</version>
+            <artifactId>slf4j-reload4j</artifactId>
+            <version>2.0.2</version>
         </dependency>
         <dependency>
             <groupId>uk.co.caprica</groupId>
