Add audio mix mode menu, and fix audio group menus

--- a/src/main/resources/strings/vlcj-player.properties
+++ b/src/main/resources/strings/vlcj-player.properties
@@ -66,6 +66,14 @@ menu.audio.item.stereoMode.item.reverse     = Reverse Stereo
 menu.audio.item.stereoMode.item.dolbys      = Dolby-S
 menu.audio.item.stereoMode.item.headphones  = Headphones
 menu.audio.item.stereoMode.item.mono        = Mono
+menu.audio.item.audioMixMode                = Mix Mode
+menu.audio.item.audioMixMode.mnemonic       = M
+menu.audio.item.audioMixMode.item.unset     = Unset
+menu.audio.item.audioMixMode.item.stereo    = Stereo
+menu.audio.item.audioMixMode.item.binaural  = Binaural
+menu.audio.item.audioMixMode.item.fourZero  = 4.0
+menu.audio.item.audioMixMode.item.fiveOne   = 5.1
+menu.audio.item.audioMixMode.item.sevenOne  = 7.1
 menu.audio.item.increaseVolume              = Increase Volume
 menu.audio.item.increaseVolume.mnemonic     = I
 menu.audio.item.increaseVolume.menuIcon     = increase-volume
