Add video fit mode

--- a/src/main/resources/strings/vlcj-player.properties
+++ b/src/main/resources/strings/vlcj-player.properties
@@ -93,6 +93,13 @@ menu.video.item.fullscreen.shortcut         = F11
 menu.video.item.fullscreen.tooltip          = Toggle the video in fullscreen
 menu.video.item.alwaysOnTop                 = Always on Top
 menu.video.item.alwaysOnTop.mnemonic        = O
+menu.video.item.fit                         = Fit
+menu.video.item.fit.mnemonic                = F
+menu.video.item.fit.item.none               = None
+menu.video.item.fit.item.smaller            = Smaller
+menu.video.item.fit.item.larger             = Larger
+menu.video.item.fit.item.width              = Width
+menu.video.item.fit.item.height             = Height
 menu.video.item.zoom                        = Zoom
 menu.video.item.zoom.mnemonic               = Z
 menu.video.item.zoom.item.quarter           = 1:4 Quarter
